# cmake-nRF5x

./: README.md
ci/examples/proprietary_rf/esb_low_power_ptx/: CMakeLists.txt
ci/examples/proprietary_rf/esb_ptx/: CMakeLists.txt
ci/libraries/: nrf5_app.json  nrf5_ble.json  nrf5_common.json  nrf5_dfu.json  nrf5_external.json  nrf5_misc.json  nrf5_proprietary_rf.json  nrf5_usbd.json
ci/libraries_tests/nrf5_app_button/: CMakeLists.txt
ci/libraries_tests/nrf5_app_error/: CMakeLists.txt
ci/libraries_tests/nrf5_app_pwm/: CMakeLists.txt
ci/libraries_tests/nrf5_app_sdcard/: CMakeLists.txt
ci/libraries_tests/nrf5_app_timer/: CMakeLists.txt
ci/libraries_tests/nrf5_app_timer_v2/: CMakeLists.txt
ci/libraries_tests/nrf5_app_uart/: CMakeLists.txt
ci/libraries_tests/nrf5_app_uart_fifo/: CMakeLists.txt
ci/libraries_tests/nrf5_app_usbd/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_app_usbd_audio/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_app_usbd_cdc_acm/: CMakeLists.txt  main.c
ci/libraries_tests/nrf5_app_usbd_dummy/: CMakeLists.txt  (+1 more)
ci/scripts/: generate_cmake.sh  generate_cmake_tests.sh  prepare.sh  scrape_makefiles.sh
cmake/: nrf5.cmake  nrf5_app.cmake  nrf5_ble.cmake  nrf5_ble_pm.cmake  nrf5_ble_srv.cmake  nrf5_bsp.cmake  nrf5_common.cmake  nrf5_crypto.cmake  nrf5_dfu.cmake  nrf5_drv.cmake  nrf5_external.cmake  nrf5_external_libs.cmake  nrf5_helpers.cmake  nrf5_log.cmake  nrf5_misc.cmake  nrf5_nrfx.cmake  nrf5_proprietary_rf.cmake  nrf5_storage.cmake  nrf5_usbd.cmake
nrf5-sdk/documentation/: index.html  licenses.html  release_notes.txt
(+250 files in other folders)
